got post and get routes working

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,8 @@
-<p>show me the blog!!</p>
+<div class="card">
+  <h5 class="card-header">Blog Post Number</h5>
+  <div class="card-body">
+    <h5 class="card-title">Blog Post Title</h5>
+    <p class="card-text">This is the text content of my blog post</p>
+    <a href="#" class="btn btn-primary">comment</a>
+  </div>
+</div>
