working on log in routes, got comments to display on homepage

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,11 +1,22 @@
 <div class="card">
    {{#each postData as |post|}}
+
   <h2 class="card-header">{{post.title}}</h2>
   <div class="card-body">
     <h5 class="card-title">{{post.user_id}}</h5>
     <p class="card-text">{{post.content}}</p>
     <a href="#" class="btn btn-primary">comment</a>
+       {{#each post.postComments as |comment|}}
+   
+  {{!-- <h2 class="card-header">{{comment.content}}</h2> --}}
+  <div class="card-body">
+    <h5 class="card-title">{{comment.user_id}}</h5>
+    <p class="card-text">{{comment.content}}</p>
+    <a href="#" class="btn btn-primary">comment</a>
   </div>
     {{/each}}
+  </div>
+    {{/each}}
+    
 </div>
 
