--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,9 @@
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <h2>Tech Blog</h2>
+  <h2>
+    <a class="nav-link" href="/homepage">TECH BLOG</a>
+  </h2>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -25,9 +27,6 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Dashboard</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Profile</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/login">Log in</a>
