--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
     <header class="display-flex justify-space-between align-center p-2">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <h2>
-    <a class="nav-link" href="/homepage">TECH BLOG</a>
+    <a class="nav-link" href="/">TECH BLOG</a>
   </h2>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -29,10 +29,12 @@
         <a class="nav-link" href="#">Dashboard</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/login">Log in</a>
+        <a class="nav-link" href="/login">Log in or Sign in </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+  {{#if logged_in}}
+  <script src="/js/logout.js"></script>
+  {{/if}}
       </li>
     </ul>
   </div>
@@ -48,10 +50,10 @@
     </footer>
   </div>
 
-  <!-- Render script for logged in users only -->
-  {{!-- {{#if logged_in}}
+  
+  {{#if logged_in}}
   <script src="/js/logout.js"></script>
-  {{/if}} --}}
+  {{/if}} 
 </body>
 
 </html>
