--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,5 +17,23 @@
     </form>
   </div>
   <div class="col-md-6">
+<div class="col-md-6">
+    <h2>Signup</h2>
 
+    <form class="form signup-form">
+      <div class="form-group"></div>
+      <div class="form-group">
+        <label for="email-signup">new username:</label>
+        <input class="form-input" type="text" id="email-signup" />
+      </div>
+      <div class="form-group">
+        <label for="password-signup">password:</label>
+        <input class="form-input" type="password" id="password-signup" />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">signup</button>
+      </div>
+    </form>
+  </div>
+</div>
 <script src="./js/login.js"></script>
