--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,19 +22,14 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="/userprofile">User Profile</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Dashboard</a>
+        <a class="nav-link" href="/login">Log in/sign in </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/login">Log in or Sign in </a>
-      </li>
-      <li class="nav-item">
-  {{#if logged_in}}
-  <script src="/js/logout.js"></script>
-  {{/if}}
+   
       </li>
     </ul>
   </div>
@@ -53,7 +48,7 @@
   
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
-  {{/if}} 
+  {{/if}}
 </body>
 
 </html>
