--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/userprofile">User Profile</a>
+        <a class="nav-link" href="/newuser">User Profile</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/login">Log in/sign in </a>
